Adapt build for macos